cmake_minimum_required(VERSION 3.13)
project("OpenMC")

set(CMAKE_CXX_STANDARD 23)

file(GLOB_RECURSE OPENMC_SOURCES "OpenMC/*.cpp" "OpenMC/*.hpp")
add_executable(${PROJECT_NAME} ${OPENMC_SOURCES})

set_property(TARGET ${PROJECT_NAME} PROPERTY DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")

target_link_libraries(${PROJECT_NAME} PRIVATE ${LE_LIBRARIES})